re PR tree-optimization/43842 (ice in vect_create_epilog_for_reduction)

PR tree-optimization/43842
	* tree-vect-loop.c (vect_create_epilog_for_reduction): Handle 
	loop unrolling in update of exit phis. Fix comment.
	* tree-vect-slp.c (vect_analyze_slp): Check that there are at
	least two reduction statements in the loop before starting SLP 
	analysis.

From-SVN: r158650